tests/variables/valid/unused_exp.su
s32 main() {
    2 + 2;
    return 0;
}