tests/variables/invalid/syntax_err_bad_decl.su
s32 main() {
    ints a = 1;
    return a;
}